--- a/entities/stateful/cache.yaml
+++ b/entities/stateful/cache.yaml
@@ -10,14 +10,14 @@ spec:
   serviceName: "${CACHE_SERVICE_NAME@microservice-auth-config}"
   selector:
     matchLabels:
-      app: "${DATA_STATEFUL_NAME}"
+      app: "${CACHE_STATEFUL_NAME}"
   replicas: 1
   template:
     metadata:
       labels:
         moduleid: microservice-auth-cache
         version: 1.70.3-master
-        app: "${DATA_STATEFUL_NAME}"
+        app: "${CACHE_STATEFUL_NAME}"
     spec:
       terminationGracePeriodSeconds: 10
       containers:
