--- a/config.json
+++ b/config.json
@@ -2,11 +2,15 @@
   "dependencies": {
     "microservice-config": {
       "url": "github.com:vicjicaman/microservice-config.git",
-      "version": "file:./../microservice-config"
+      "version": "1.70.2-master"
     },
     "microservice-auth-config": {
       "url": "github.com:vicjicaman/microservice-auth-config.git",
       "version": "file:./../microservice-auth-config"
+    },
+    "microservice-resources-config": {
+      "url": "github.com:vicjicaman/microservice-resources-config.git",
+      "version": "1.70.1-master"
     }
   },
   "config": [
