--- a/entities/volume/data.yaml
+++ b/entities/volume/data.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "${DATA_VOLUME_NAME}"
   namespace: ${NAMESPACE@microservice-config}
   labels:
-    service: auth-data
+    service: "${DATA_SERVICE_NAME@microservice-auth-config}"
 spec:
   capacity:
     storage: "1Gi"
@@ -12,4 +12,4 @@ spec:
     - "ReadWriteOnce"
   awsElasticBlockStore:
     fsType: "ext4"
-    volumeID: "vol-0572afea6012336e4"
+    volumeID: "vol-0572afea6012336e7"
