--- a/config.json
+++ b/config.json
@@ -6,21 +6,17 @@
     },
     "microservice-auth-config": {
       "url": "github.com:vicjicaman/microservice-auth-config.git",
-      "version": "1.70.5-master"
+      "version": "file:./../microservice-auth-config"
     },
     "microservice-resources-config": {
       "url": "github.com:vicjicaman/microservice-resources-config.git",
-      "version": "1.70.1-master"
+      "version": "file:./../microservice-resources-config"
     }
   },
   "config": [
     {
       "name": "CACHE_VOLUME_NAME",
       "value": "auth-cache-volume"
-    },
-    {
-      "name": "CACHE_SECRET_NAME",
-      "value": "auth-cache-secret"
     },
     {
       "name": "CACHE_CLAIM_NAME",
