--- a/entities/stateful/cache.yaml
+++ b/entities/stateful/cache.yaml
@@ -40,7 +40,7 @@ spec:
               name: CACHE_SECRET_PASSWORD
               valueFrom:
                 secretKeyRef:
-                  name: '${CACHE_SECRET_NAME}'
+                  name: '${CACHE_SECRET_NAME@microservice-auth-config}'
                   key: password
           ports:
             -
