--- a/entities/stateful/data.yaml
+++ b/entities/stateful/data.yaml
@@ -1,41 +1,52 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: '${DATA_STATEFUL_NAME}'
-  namespace: '${NAMESPACE@microservice-config}'
+  name: "${DATA_STATEFUL_NAME}"
+  namespace: "${NAMESPACE@microservice-config}"
   labels:
     moduleid: microservice-auth-data
     version: 1.70.3-master
 spec:
-  serviceName: '${DATA_SERVICE_NAME@microservice-auth-config}'
+  serviceName: "${DATA_SERVICE_NAME@microservice-auth-config}"
   selector:
     matchLabels:
-      app: '${DATA_STATEFUL_NAME}'
+      app: "${DATA_STATEFUL_NAME}"
   replicas: 1
   template:
     metadata:
       labels:
         moduleid: microservice-auth-realm
         version: 1.70.4-master
-        app: '${DATA_STATEFUL_NAME}'
+        app: "${DATA_STATEFUL_NAME}"
     spec:
       terminationGracePeriodSeconds: 10
       containers:
-        -
-          name: data
-          image: 'mongo:4.2.0'
-          command:
-            - mongod
-            - '--bind_ip_all'
+        - name: data
+          image: "bitnami/mongodb:4.0.12"
           ports:
-            -
-              containerPort: '${DATA_INTERNAL_PORT@microservice-auth-config}'
+            - containerPort: "${DATA_INTERNAL_PORT@microservice-auth-config}"
           volumeMounts:
-            -
-              name: data
-              mountPath: /data/db
+            - name: data
+              mountPath: /bitnami
+          env:
+            - name: MONGODB_DATABASE
+              value: "${DATA_NAME@microservice-auth-config}"
+            - name: MONGODB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: "${DATA_SECRET_NAME@microservice-auth-config}"
+                  key: user
+            - name: MONGODB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: "${DATA_SECRET_NAME@microservice-auth-config}"
+                  key: user_password
+            - name: MONGODB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: "${DATA_SECRET_NAME@microservice-auth-config}"
+                  key: root_password
       volumes:
-        -
-          name: data
+        - name: data
           persistentVolumeClaim:
-            claimName: '${DATA_CLAIM_NAME}'
+            claimName: "${DATA_CLAIM_NAME}"
