Add logger, update Dockerfile and node version

--- a/entities/volume/data.yaml
+++ b/entities/volume/data.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: ${NAMESPACE@microservice-config}
   labels:
     service: "${DATA_SERVICE_NAME@microservice-auth-config}"
+    fsOwner: "1001"
+    fsGroup: "0"
+    fsMode: "775"
 spec:
   capacity:
     storage: "1Gi"
