Change to local-storage for temporal production deploy

--- a/entities/claim/data.yaml
+++ b/entities/claim/data.yaml
@@ -4,12 +4,12 @@ metadata:
   name: ${DATA_CLAIM_NAME}
   namespace: '${NAMESPACE@microservice-config}'
 spec:
-  storageClassName: standard
+  storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 500Mi
   selector:
     matchLabels:
       service: "${DATA_SERVICE_NAME@microservice-auth-config}"
