--- a/entities/volume/cache.yaml
+++ b/entities/volume/cache.yaml
@@ -7,9 +7,9 @@ metadata:
     service: "${CACHE_SERVICE_NAME@microservice-auth-config}"
 spec:
   capacity:
-    storage: "1Gi"
+    storage: "100Mi"
   accessModes:
     - "ReadWriteOnce"
-  awsElasticBlockStore:
-    fsType: "ext4"
-    volumeID: "vol-0572afea6012336e6"
+  storageClassName: local-storage
+  hostPath:
+    path: /home/docker/production/${HOST@microservice-config}/volumes/${CACHE_VOLUME_NAME}
