--- a/entities/claim/cache.yaml
+++ b/entities/claim/cache.yaml
@@ -4,12 +4,12 @@ metadata:
   name: ${CACHE_CLAIM_NAME}
   namespace: '${NAMESPACE@microservice-config}'
 spec:
-  storageClassName: standard
+  storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 100Mi
   selector:
     matchLabels:
       service: "${CACHE_SERVICE_NAME@microservice-auth-config}"
