--- a/entities/volume/data.yaml
+++ b/entities/volume/data.yaml
@@ -10,9 +10,9 @@ metadata:
     fsMode: "775"
 spec:
   capacity:
-    storage: "1Gi"
+    storage: "500Mi"
   accessModes:
     - "ReadWriteOnce"
-  awsElasticBlockStore:
-    fsType: "ext4"
-    volumeID: "vol-0572afea6012336e7"
+  storageClassName: local-storage
+  hostPath:
+    path: /home/docker/production/${HOST@microservice-config}/volumes/${DATA_VOLUME_NAME}
