add limit-rps annotation

--- a/entities/deployment/account.yaml
+++ b/entities/deployment/account.yaml
@@ -23,6 +23,9 @@ spec:
           image: 'repoflow/microservice-account-graph-container:1.70.7-master'
           env:
             -
+              name: ENV_MODE
+              value: production
+            -
               name: ACCOUNT_ROUTE_GRAPH
               value: '${ACCOUNT_GRAPH_BASE_ROUTE@microservice-auth-config}'
             -
