--- a/entities/deployment/web.yaml
+++ b/entities/deployment/web.yaml
@@ -23,6 +23,9 @@ spec:
           image: 'repoflow/microservice-auth-web-container:1.70.6-master'
           env:
             -
+              name: ENV_MODE
+              value: production
+            -
               name: HOST
               value: '${HOST@microservice-config}'
             -
