--- a/entities/service/queue.yaml
+++ b/entities/service/queue.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "${QUEUE_SERVICE_NAME@linker-auth-config}"
+  name: "${QUEUE_SERVICE_NAME@microservice-auth-config}"
   namespace: "${NAMESPACE@linker-config}"
   labels:
     moduleid: linker-auth-realm
@@ -10,10 +10,10 @@ spec:
   type: ClusterIP
   ports:
     - name: "queue"
-      port: "${QUEUE_INTERNAL_PORT@linker-auth-config}"
-      targetPort: "${QUEUE_INTERNAL_PORT@linker-auth-config}"
+      port: "${QUEUE_INTERNAL_PORT@microservice-auth-config}"
+      targetPort: "${QUEUE_INTERNAL_PORT@microservice-auth-config}"
     - name: "manager"
-      port: "${QUEUE_MGR_INTERNAL_PORT@linker-auth-config}"
-      targetPort: "${QUEUE_MGR_INTERNAL_PORT@linker-auth-config}"
+      port: "${QUEUE_MGR_INTERNAL_PORT@microservice-auth-config}"
+      targetPort: "${QUEUE_MGR_INTERNAL_PORT@microservice-auth-config}"
   selector:
     app: "${QUEUE_STATEFUL_NAME}"
