--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     },
     "microservice-auth-config": {
       "url": "github.com:vicjicaman/microservice-auth-config.git",
-      "version": "1.70.8-master"
+      "version": "file:./../microservice-auth-config"
     },
     "microservice-resources-config": {
       "url": "github.com:vicjicaman/microservice-resources-config.git",
