Fix issue with linker namespace config

--- a/entities/secret/email.yaml
+++ b/entities/secret/email.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ${EMAIL_SECRET_NAME}
-  namespace: ${NAMESPACE@linker-config}
+  namespace: ${NAMESPACE@microservice-config}
   labels:
-    moduleid: linker-auth-realm
+    moduleid: microservice-auth-realm
     version: 1.70.0-master
 data:
   clientid: "-"
