--- a/entities/volume/queue.yaml
+++ b/entities/volume/queue.yaml
@@ -2,7 +2,7 @@ apiVersion: "v1"
 kind: "PersistentVolume"
 metadata:
   name: "${QUEUE_VOLUME_NAME}"
-  namespace: ${NAMESPACE@linker-config}
+  namespace: ${NAMESPACE@microservice-config}
   labels:
     service: "${QUEUE_SERVICE_NAME@microservice-auth-config}"
 spec:
@@ -12,4 +12,4 @@ spec:
     - "ReadWriteOnce"
   storageClassName: local-storage
   hostPath:
-    path: /home/docker/production/${HOST@linker-config}/volumes/${QUEUE_VOLUME_NAME}
+    path: /home/docker/production/${HOST@microservice-config}/volumes/${QUEUE_VOLUME_NAME}
