--- a/entities/claim/queue.yaml
+++ b/entities/claim/queue.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: ${QUEUE_CLAIM_NAME}
-  namespace: '${NAMESPACE@linker-config}'
+  namespace: '${NAMESPACE@microservice-config}'
 spec:
   storageClassName: local-storage
   accessModes:
