--- a/entities/secret/queue.yaml
+++ b/entities/secret/queue.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: ${QUEUE_SECRET_NAME@microservice-auth-config}
-  namespace: ${NAMESPACE@linker-config}
+  namespace: ${NAMESPACE@microservice-config}
 data:
   user: "-"
   password: "-"
