--- a/entities/service/queue.yaml
+++ b/entities/service/queue.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "${QUEUE_SERVICE_NAME@microservice-auth-config}"
-  namespace: "${NAMESPACE@linker-config}"
+  namespace: "${NAMESPACE@microservice-config}"
   labels:
-    moduleid: linker-auth-realm
+    moduleid: microservice-auth-realm
     version: 1.70.3-master
 spec:
   type: ClusterIP
