--- a/entities/stateful/queue.yaml
+++ b/entities/stateful/queue.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: '${QUEUE_STATEFUL_NAME}'
-  namespace: '${NAMESPACE@linker-config}'
+  namespace: '${NAMESPACE@microservice-config}'
   labels:
-    moduleid: linker-auth-realm
+    moduleid: microservice-auth-realm
     version: 1.70.9-master
 spec:
   serviceName: '${QUEUE_SERVICE_NAME@microservice-auth-config}'
